# airi

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.ja-JP.md  README.md  README.zh-CN.md  bump.config.ts  crowdin.yml  cspell.config.yaml  eslint.config.js  eslint.config.mjs  eslint.config.ts  flake.nix  index.html  nuxt.config.ts  package.json  package.nix  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.workspace.ts
.gemini/: config.yaml  styleguide.md
.github/: FUNDING.yml  (+3 more)
apps/stage-tamagotchi/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/stage-tamagotchi/src-tauri/capabilities/: default.json
apps/stage-tamagotchi/src-tauri/icons/: icon.icns
apps/stage-tamagotchi/src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
apps/stage-tamagotchi/src-tauri/libs/esaxx-rs/: build.rs
apps/stage-tamagotchi/src-tauri/src/: commands.rs  lib.rs
apps/stage-tamagotchi/src-tauri/src/app/: mod.rs
apps/stage-tamagotchi/src-tauri/src/app/commands/: mod.rs
apps/stage-tamagotchi/src-tauri/src/app/models/: mod.rs
apps/stage-tamagotchi/src-tauri/src/app/windows/: chat.rs  mod.rs  onboarding.rs  settings.rs
apps/stage-tamagotchi/src-tauri/src/app_click_through/: mod.rs  native_macos.rs  native_windows.rs  state.rs
apps/stage-tamagotchi/src-tauri/src/app_windows/: chat.rs  settings.rs
apps/stage-tamagotchi/src-tauri/src/helpers/: huggingface.rs
apps/stage-tamagotchi/src-tauri/src/plugins/: mod.rs
apps/stage-tamagotchi/src-tauri/src/plugins/audio_transcription/: mod.rs
apps/stage-tamagotchi/src-tauri/src/plugins/audio_vad/: mod.rs
apps/stage-tamagotchi/src-tauri/src/plugins/tray/: mod.rs
apps/stage-tamagotchi/src-tauri/src/plugins/window/: mod.rs
apps/stage-tamagotchi/src-tauri/src/plugins/window_pass_through_on_hover/: mod.rs  native_windows.rs  state.rs
apps/stage-tamagotchi/src-tauri/src/plugins/window_persistence/: mod.rs
apps/stage-tamagotchi/src-tauri/src/plugins/window_router_link/: mod.rs
apps/stage-tamagotchi/src-tauri/src/whisper/: mod.rs  model_manager.rs  progress.rs  vad.rs  whisper.rs
apps/stage-tamagotchi/src-tauri/src/windows/: chat.rs  settings.rs
apps/stage-tamagotchi/src-tauri/tauri-plugin-mcp/: Cargo.toml  README.md
apps/stage-tamagotchi/src-tauri/tauri-plugin-mcp/permissions/: default.toml
apps/stage-tamagotchi/src-tauri/tauri-plugin-mcp/permissions/autogenerated/: reference.md
apps/stage-tamagotchi/src-tauri/tauri-plugin-mcp/src/: lib.rs
crates/tauri-plugin-ipc-audio-transcription-candle/: Cargo.toml  build.rs
crates/tauri-plugin-ipc-audio-transcription-candle/permissions/: default.toml
crates/tauri-plugin-ipc-audio-transcription-candle/permissions/autogenerated/: reference.md
crates/tauri-plugin-ipc-audio-transcription-candle/permissions/autogenerated/commands/: ipc_audio_transcription.toml
crates/tauri-plugin-ipc-audio-transcription-candle/permissions/schemas/: schema.json
crates/tauri-plugin-ipc-audio-transcription-candle/src/: lib.rs
crates/tauri-plugin-ipc-audio-transcription-candle/src/models/: mod.rs
crates/tauri-plugin-ipc-audio-transcription-candle/src/models/whisper/: mod.rs
crates/tauri-plugin-ipc-audio-transcription-ort/: Cargo.toml  build.rs
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/: default.toml
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/autogenerated/: reference.md
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/autogenerated/commands/: load_candle_model_whisper.toml  load_ort_model_whisper.toml
crates/tauri-plugin-ipc-audio-transcription-ort/permissions/schemas/: schema.json
crates/tauri-plugin-ipc-audio-transcription-ort/src/: lib.rs
crates/tauri-plugin-ipc-audio-transcription-ort/src/models/: mod.rs
crates/tauri-plugin-ipc-audio-transcription-ort/src/models/whisper/: mod.rs  whisper.rs  whisper_processor.rs
crates/tauri-plugin-ipc-audio-vad-ort/: Cargo.toml  build.rs
crates/tauri-plugin-ipc-audio-vad-ort/permissions/: default.toml
crates/tauri-plugin-ipc-audio-vad-ort/permissions/autogenerated/: reference.md
crates/tauri-plugin-ipc-audio-vad-ort/permissions/autogenerated/commands/: ipc_audio_vad.toml  load_ort_model_silero_vad.toml
crates/tauri-plugin-ipc-audio-vad-ort/permissions/schemas/: schema.json
crates/tauri-plugin-ipc-audio-vad-ort/src/: lib.rs
crates/tauri-plugin-ipc-audio-vad-ort/src/helpers/: huggingface.rs
crates/tauri-plugin-ipc-audio-vad-ort/src/models/: mod.rs
crates/tauri-plugin-ipc-audio-vad-ort/src/models/silero_vad/: mod.rs
crates/tauri-plugin-mcp/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-mcp/permissions/autogenerated/: reference.md
crates/tauri-plugin-mcp/permissions/autogenerated/commands/: call_tool.toml  connect_server.toml  list_tools.toml
crates/tauri-plugin-mcp/permissions/schemas/: schema.json
crates/tauri-plugin-mcp/src/: lib.rs
crates/tauri-plugin-rdev/: Cargo.toml
crates/tauri-plugin-rdev/src/: lib.rs
crates/tauri-plugin-window-pass-through-on-hover/: Cargo.toml  build.rs
crates/tauri-plugin-window-pass-through-on-hover/permissions/: default.toml
crates/tauri-plugin-window-pass-through-on-hover/permissions/autogenerated/: reference.md
crates/tauri-plugin-window-pass-through-on-hover/permissions/autogenerated/commands/: start_pass_through.toml  start_tracing_cursor.toml  stop_pass_through.toml  stop_tracing_cursor.toml
crates/tauri-plugin-window-pass-through-on-hover/permissions/schemas/: schema.json
crates/tauri-plugin-window-pass-through-on-hover/src/: lib.rs  native_macos.rs  types.rs
crates/tauri-plugin-window-router-link/: Cargo.toml  build.rs
crates/tauri-plugin-window-router-link/permissions/: default.toml
crates/tauri-plugin-window-router-link/permissions/autogenerated/: reference.md
crates/tauri-plugin-window-router-link/permissions/autogenerated/commands/: go.toml
crates/tauri-plugin-window-router-link/permissions/schemas/: schema.json
crates/tauri-plugin-window-router-link/src/: lib.rs
(+1065 files in other folders)
