[workspace]
members = [
  "crates/*",
  "apps/stage-tamagotchi/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.6.1"

[workspace.dependencies]

[workspace.dependencies.tauri-plugin-mcp]
path = "./crates/tauri-plugin-mcp"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[patch.crates-io]
esaxx-rs = { path = "apps/stage-tamagotchi/src-tauri/libs/esaxx-rs" }
