[package]
name = "tauri-plugin-ipc-audio-transcription-candle"
version.workspace = true
description = "Audio transcription plugin for Tauri using Candle (huggingface/candle)"
authors = [ "Neko Ayaka <neko@ayaka.moe>" ]
license = "MIT"
repository = "https://github.com/moeru-ai/airi"
edition = "2024"
rust-version = "1.85.0"
links = "tauri-plugin-ipc-audio-transcription-candle"

[lib]
name = "tauri_plugin_ipc_audio_transcription_candle"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[features]
default = []
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda"
]

[dependencies]
tauri = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
ndarray = "0.16.1"
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
log = "0.4"
anyhow = "1"
tokenizers = "0.21.2"
hf-hub = "0.4.3"
symphonia = "0.5.4"
rubato = "0.16.2"
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }

[build-dependencies]
tauri-plugin = { version = "2.2", features = [ "build" ] }
