[package]
name = "tauri-plugin-mcp"
version.workspace = true
description = "A Tauri plugin for interacting with MCP servers"
authors = [ "LemonNekoGH <self@lemonneko.moe>" ]
license = "MIT"
repository = "https://github.com/moeru-ai/airi"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-mcp"

[lib]
name = "tauri_plugin_mcp"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[dependencies]
tauri = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
rmcp = { version = "0.1", features = [
  "client",
  "transport-child-process"
] }
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"

[build-dependencies]
tauri-plugin = { version = "2.2", features = [ "build" ] }
