[package]
name = "tauri-plugin-window-pass-through-on-hover"
version.workspace = true
description = "Fade on Hover (FoH), or pass through on hover of window, plugin for Tauri"
authors = [ "Neko Ayaka <neko@ayaka.moe>" ]
license = "MIT"
repository = "https://github.com/moeru-ai/airi"
edition = "2024"
rust-version = "1.85.0"
links = "tauri-plugin-window-pass-through-on-hover"
publish = false

[lib]
name = "tauri_plugin_window_pass_through_on_hover"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[dependencies]
tauri = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[build-dependencies]
tauri-plugin = { version = "2.2", features = [ "build" ] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
